--- a/app/src/main/res/layout/content_loan_apply.xml
+++ b/app/src/main/res/layout/content_loan_apply.xml
@@ -37,7 +37,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <com.app.l_pesa.common.CommonInputLayout
-                    android:id="@+id/tilChooseDescription"
+                    android:id="@+id/tilChooseTerm"
                     style="@style/customInputLayoutStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -45,6 +45,27 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/txt_description">
+
+                    <com.app.l_pesa.common.CommonEditTextRegular
+                        android:id="@+id/etChooseTerm"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:hint="@string/choose_terms"
+                        android:textColor="@color/light_text_color"
+                        android:textSize="@dimen/_13sdp"
+                        android:longClickable="false"
+                        android:drawableEnd="@drawable/ic_dropdown"/>
+
+                </com.app.l_pesa.common.CommonInputLayout>
+                <com.app.l_pesa.common.CommonInputLayout
+                    android:id="@+id/tilChooseDescription"
+                    style="@style/customInputLayoutStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_7sdp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tilChooseTerm">
 
                     <com.app.l_pesa.common.CommonEditTextRegular
                         android:id="@+id/etChooseDescription"
