--- a/app/src/main/res/layout/content_loan_apply.xml
+++ b/app/src/main/res/layout/content_loan_apply.xml
@@ -51,7 +51,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:hint="@string/choose_terms"
-                        android:textColor="@color/light_text_color"
+                        android:textColor="@color/textColors"
                         android:textSize="@dimen/_13sdp"
                         android:longClickable="false"
                         android:drawableEnd="@drawable/ic_dropdown"/>
@@ -72,7 +72,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:hint="@string/choose_description"
-                        android:textColor="@color/light_text_color"
+                        android:textColor="@color/textColors"
                         android:textSize="@dimen/_13sdp"
                         android:longClickable="false"
                         android:drawableEnd="@drawable/ic_dropdown"/>
