--- a/app/src/main/res/layout/layout_marital_loan_term_cell.xml
+++ b/app/src/main/res/layout/layout_marital_loan_term_cell.xml
@@ -22,6 +22,7 @@
 
     <com.app.l_pesa.common.CommonTextRegular
         android:id="@+id/tvDuration"
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
