--- a/app/src/main/res/layout/fragment_business_id_layout.xml
+++ b/app/src/main/res/layout/fragment_business_id_layout.xml
@@ -66,10 +66,11 @@
                 <com.app.l_pesa.common.CommonInputLayout
                     android:id="@+id/commonInputLayout2"
                     style="@style/customInputLayoutStyle"
-                    android:layout_width="@dimen/_165sdp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_3sdp"
                     android:layout_marginTop="@dimen/_7sdp"
+                    android:layout_marginEnd="8dp"
                     app:layout_constraintBottom_toTopOf="@+id/ilIdNumber"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/textView9"
@@ -96,7 +97,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_3sdp"
                     android:layout_marginBottom="@dimen/_12sdp"
-                    android:visibility="invisible"
+                    android:visibility="gone"
                     app:layout_constraintBottom_toTopOf="@+id/view3"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/textView9"
