--- a/app/src/main/res/layout/dialog_payment_schedule.xml
+++ b/app/src/main/res/layout/dialog_payment_schedule.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -11,45 +11,45 @@
         android:layout_margin="@dimen/_5sdp"
         >
 
-    <com.app.l_pesa.common.CommonTextRegular
-        android:id="@+id/txtTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/_12sdp"
-        android:textColor="@color/color_semi_deep_black"
-        android:padding="@dimen/_2sdp"
-        android:gravity="center|start"
-        />
-
-    <ScrollView
-        android:id="@+id/scroller"
-        android:layout_below="@+id/txtTitle"
-        android:layout_above="@+id/txtData"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
-        <TextView
-            android:id="@+id/txtContent"
+        <com.app.l_pesa.common.CommonTextRegular
+            android:id="@+id/txtTitle"
+            tools:text="Title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/montserrat"
-            android:textColor="#3b3e42"
-            android:textSize="@dimen/_11sdp"
+            android:gravity="center|start"
+            android:padding="@dimen/_2sdp"
+            android:textColor="?android:textColorPrimary"
+            android:textSize="@dimen/_12sdp" />
+
+        <ScrollView
+            android:id="@+id/scroller"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/txtData"
+            android:layout_below="@+id/txtTitle">
+
+            <TextView
+                android:id="@+id/txtContent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat"
+                android:padding="@dimen/_5sdp"
+                android:textColor="?android:textColorSecondary"
+                android:textSize="@dimen/_11sdp"
+                tools:text="jhkjh" />
+
+        </ScrollView>
+
+        <com.app.l_pesa.common.CommonTextRegular
+            android:id="@+id/txtData"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:gravity="center|start"
             android:padding="@dimen/_5sdp"
-         />
-
-    </ScrollView>
-
-    <com.app.l_pesa.common.CommonTextRegular
-        android:id="@+id/txtData"
-        android:layout_alignParentBottom="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/_12sdp"
-        android:textColor="@color/colorRed"
-        android:padding="@dimen/_5sdp"
-        android:gravity="center|start"
-        />
+            tools:text="uytuyt"
+            android:textColor="@color/colorRed"
+            android:textSize="@dimen/_12sdp" />
 
     </RelativeLayout>
 
