--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -73,12 +73,12 @@
     </style>
 
     <style name="NegativeButtonStyle" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
-        <item name="android:textColor">#313131</item>
+        <item name="android:textColor">@color/dark_text_color</item>
         <item name="android:fontFamily">@font/montserrat</item>
         <item name="android:textSize">@dimen/_13sdp</item>
     </style>
     <style name="PositiveButtonStyle" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
-        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textColor">@color/colorApp</item>
         <item name="android:fontFamily">@font/montserrat</item>
         <item name="android:textSize">@dimen/_13sdp</item>
     </style>
