camera guide box enabled

--- a/app/src/main/res/layout/content_loan_history_details.xml
+++ b/app/src/main/res/layout/content_loan_history_details.xml
@@ -949,7 +949,7 @@
                                             android:layout_width="match_parent"
                                             android:layout_weight="1"
                                             android:layout_height="wrap_content"
-                                            android:text="Total Loan Amount: "
+                                            android:text="Total Payback Amount : "
                                             android:textColor="@color/color_gray_light"
                                             android:textSize="@dimen/_11sdp" />
 
