--- a/app/src/main/res/layout/fragment_dashboard_layout.xml
+++ b/app/src/main/res/layout/fragment_dashboard_layout.xml
@@ -246,14 +246,11 @@
                   android:background="@color/semi_white"
                   android:orientation="vertical">
 
-                  <ImageView
+                  <androidx.viewpager2.widget.ViewPager2
                       android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:scaleType="centerCrop"
-                      android:layout_margin="@dimen/_5sdp"
-                      android:adjustViewBounds="true"
-                      android:src="@drawable/add_banner"
-                      android:contentDescription="@string/app_name" />
+                      android:id="@+id/pagerAdBanner"
+                      android:layout_height="@dimen/_250sdp"/>
+
 
                   <ImageView
                       android:id="@+id/imgSasaBanner"
