--- a/app/src/main/res/layout/payment_ui_dialog_bottom_sheet.xml
+++ b/app/src/main/res/layout/payment_ui_dialog_bottom_sheet.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
+    android:id="@+id/llPaymentDialog"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="@dimen/_5sdp">
@@ -21,6 +22,7 @@
         android:textColor="@color/colorApp"
         android:textAlignment="textEnd"
         android:textStyle="bold"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:text="Short Code : 987987"
@@ -50,6 +52,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/colorApp"
         android:gravity="right">
         <Button
             android:id="@+id/btnCancel"
@@ -57,16 +60,16 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/_3sdp"
             android:text="Cancel"
-            android:textColor="#fff"
-            android:background="@drawable/bg_button_yellow"/>
+            android:textColor="?android:textColorPrimaryInverse"
+            android:background="@android:color/transparent"/>
         <Button
             android:id="@+id/btnPay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/_3sdp"
-            android:textColor="#fff"
+            android:textColor="?android:textColorPrimaryInverse"
             android:text="Pay"
-            android:background="@drawable/bg_button_green"/>
+            android:background="@android:color/transparent"/>
     </LinearLayout>
 
 </LinearLayout>
