--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -203,18 +203,20 @@
             android:id="@+id/tvLoginTermPolicy"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_15sdp"
-            android:layout_marginEnd="@dimen/_15sdp"
-            android:layout_marginBottom="@dimen/_10sdp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             android:fontFamily="@font/montserrat"
             android:gravity="center|bottom"
             android:text="@string/privacy_term_condition_login"
             android:textColor="@color/dark_text_color"
             android:textSize="@dimen/_10sdp"
-            app:layout_constraintTop_toBottomOf="@+id/barrier1"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintEnd_toEndOf="@+id/buttonLoanCalculator"
+            app:layout_constraintStart_toStartOf="@+id/buttonLoanCalculator"
+            app:layout_constraintTop_toBottomOf="@+id/buttonLoanCalculator"
+            app:layout_constraintVertical_bias="1.0" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
