loading details loan history from history list solved

--- a/app/src/main/res/layout/content_loan_history_details.xml
+++ b/app/src/main/res/layout/content_loan_history_details.xml
@@ -1139,7 +1139,7 @@
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
         <FrameLayout
-            android:visibility="gone"
+            android:visibility="visible"
             android:id="@+id/flLoader"
             android:background="?colorSurface"
             android:layout_width="match_parent"
