ML data implemented

--- a/app/src/main/res/layout/fragment_dev.xml
+++ b/app/src/main/res/layout/fragment_dev.xml
@@ -17,4 +17,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.switchmaterial.SwitchMaterial
+        android:id="@+id/smDataSync"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Sync Phone Data"
+        app:layout_constraintEnd_toEndOf="@+id/smObserver"
+        app:layout_constraintStart_toStartOf="@+id/smObserver"
+        app:layout_constraintTop_toBottomOf="@+id/smObserver" />
 </androidx.constraintlayout.widget.ConstraintLayout>
