--- a/app/src/main/res/layout/fragment_dev.xml
+++ b/app/src/main/res/layout/fragment_dev.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".dev_options.views.DevFragment">
+    tools:context=".user_device_data.views.DevFragment">
 
     <com.google.android.material.switchmaterial.SwitchMaterial
         android:id="@+id/smObserver"
