--- a/app/src/main/res/layout/fragment_dashboard_layout.xml
+++ b/app/src/main/res/layout/fragment_dashboard_layout.xml
@@ -171,15 +171,15 @@
 
                       <com.app.l_pesa.common.CommonTextRegular
                           android:id="@+id/credit_score_label"
-                          android:layout_alignParentTop="true"
-                          android:layout_centerHorizontal="true"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
+                          android:layout_alignParentTop="true"
+                          android:layout_centerHorizontal="true"
+                          android:layout_marginTop="@dimen/_2sdp"
                           android:fontFamily="@font/montserrat"
                           android:text="@string/your_credit_score"
-                          android:textSize="@dimen/_12sdp"
-                          android:layout_marginTop="@dimen/_2sdp"
-                          android:textColor="@color/dark_text_color"/>
+                          android:textColor="@color/dark_text_color"
+                          android:textSize="@dimen/_12sdp" />
 
 
                       <com.warkiz.widget.IndicatorStayLayout
