--- a/app/src/main/res/menu/menu_statement_add.xml
+++ b/app/src/main/res/menu/menu_statement_add.xml
@@ -8,4 +8,7 @@
         android:title="Add Statement"
         android:visible="true"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/mnuHelp"
+        android:title="Help" />
 </menu>
